--- a/css/shortcodes.css
+++ b/css/shortcodes.css
@@ -2213,6 +2213,7 @@ ul.payment_methods {text-align: left; padding: 1em;  border-bottom: 1px solid #d
     background-color: #fff;
     box-shadow: 0 6px 12px rgb(0 0 0 / 25%);
     z-index: 99999;
+    display: none;
 }
 .tmtheme_fbar_icons {
     display: block;
